<resources>
    <string name="app_name">AngedaSincronizareOnline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="main_nav_transfer_market">Transfer Market</string>
    <string name="main_nav_about">About</string>
    <string name="main_nav_view_meetings_by_date">View meetings by date</string>
    <string name="add_meeting_btnsave">Save</string>
    <string name="add_meeting_description_error_message">Descriere gresita</string>
    <string name="add_meeting_number_error_message">Numar de participanti incorect</string>
    <string name="add_meeting_date_error_message">Data gresita</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="an_2019">an 2019</string>
    <string name="grupa_1078_relativelayout"><![CDATA[Grupa 1078 /> </RelativeLayout>]]></string>
    <string name="grupa_1078">grupa 1078</string>
    <string name="angenda">ANGENDA</string>
    <string name="versiune_3_5">VERSIUNE 3.5</string>
    <string name="room_4">ROOM 4</string>
    <string name="room_3">ROOM 3</string>
    <string name="room_2">ROOM 2</string>
    <string name="room_1">ROOM 1</string>
    <string name="list_meetings">list meetings</string>
    <string name="meeting_adapter_no_content">null</string>
    <string name="Adaugaeveniment">Adauga un eveniment</string>
    <string name="AdaugaEvent_NumeEvenimet">Numele evenimentului</string>
    <string name="add_event_nume">Numele evenimentului</string>
    <string name="AddEvent_ora_tv">Ora evenimentului</string>
    <string name="AddEvent_alegetidata_tv">Alegeti Data</string>
    <string name="Add_task_alegeImportanta">Alege importanta eveniment</string>
    <string name="Propuneritask">Realizari dorite</string>
    <string name="REalizari">Realizari</string>
    <string name="Alegeimportantatask">Alege importanta realizare</string>
    <string name="AlegeImportanta">Alegeti importanta</string>
    <string name="AdaugaEvent">Adauga Eveniment</string>
    <string name="AlegeData">Alege data</string>
    <string name="list_Events">List evenimente</string>
    <string name="adaugaTask">Adauga Task</string>
    <string name="HomeText">Aplicatia ajuta la sincronizarea activitatilor dintr-o          intreprindere in functie de numar de participanti,  locatie si data.</string>
    <string name="importantaHome">Importanta : 10 din 10</string>
    <string name="schimba">Schimba citatul</string>
    <string name="MeetingInformation">Meeting information</string>
    <string name="AlegeRoom">Adaugati numarul camerei de unde doriti sa vedeti ce meetinguri exista.(Putetiadauga doar numere de la 1 la 4)</string>
    <string name="Alege">AlegeCamera</string>
    <string name="login_name">Name</string>
    <string name="login_parola">Parola</string>
    <string name="btn_logintext">Login</string>
    <string name="login_tv_inregistrare">Inregistrare cont</string>
    <string name="rtv_retype_parola">retype parola</string>
    <string name="btn_register_text">REgister</string>
    <string name="AlegetiNume_et">alegeti un nume pentru cont</string>
    <string name="register_parola">Introduceti parola</string>
    <string name="login_error_empty_username">Nume incorect</string>
    <string name="login_empty_password">Parola necompletata</string>
    <string name="register_confirm_message_empty">Confirmare parola necompletata</string>
    <string name="register_parola_mismatch">parolele nu sunt identice</string>
    <string name="registre_account_created">Contul a fost creat cu succes</string>
    <string name="login_nume_invalid">Nume invalid</string>
    <string name="login_parola_invalida">Parola invalida</string>
    <string name="User_negasit">Contul nu exista</string>
    <string name="AdaugaNumeProiectHomeTv">Adauga Nume Proiect</string>
    <string name="AdaugatiDetaliiDespreDumneavoastra">Adagati numarul de telefon</string>
    <string name="insertCont">Insert</string>
    <string name="ShowProojectsProjectFirebase">Show Projects</string>
    <string name="vizualizareproiecte">Vizualizare Proiecte</string>
    <string name="PRocentSucces">ProcentSucces</string>
    <string name="numeProiect">Nume Proiect</string>
    <string name="HomeTextModificat">Aplicatia ajuta la organizarea evenimentelor, intalnirilor unuor useri pentru a facilita procesul si pentru a ajuta la organizarea mai buna a vietii.</string>
</resources>
