<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/MeetingInfo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/MeetingInformation" />


        <item
            android:id="@+id/main_nav_list_events"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/list_Events" />
        <item
            android:id="@+id/main_nav_vizualizareproiecte"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/vizualizareproiecte" />
    </group>

</menu>
