<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="240dp"
        android:backgroundTint="#00a5cf"
        android:text="@string/btn_register_text"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_tv_confirm"
        android:layout_marginLeft="161dp"
        android:layout_marginRight="162dp" />

    <EditText
        android:id="@+id/register_tv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="453dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/rtv_retype_parola"
        android:inputType="textPassword"
        android:textColor="#FF5252"
        android:textColorHint="#FF5252"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/AlegetiNume_et"
        android:inputType="textPersonName"
        android:textColor="#FF5252"
        android:textColorHint="#FF5252"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/register_parola"
        android:inputType="textPassword"
        android:textColor="#FF5252"
        android:textColorHint="#FF5252"
        app:layout_constraintBottom_toTopOf="@+id/register_tv_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username" />

</androidx.constraintlayout.widget.ConstraintLayout>